# job-track

./: .gitignore  CHECKLIST.md  CONTRIBUTING.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLAN.md  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py  start_api.sh  start_tui.sh
backend/: main.py  models.py  schemas.py  scraper.py
data/: jobtrack.db  scraped_jobs.db
extension/: content.js  manifest.json  popup.css  popup.html  popup.js  service_worker.js
extension/icons/: README.md
jobtrack/: __init__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  scraped_store.py  storage.py
jobtrack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jobtrack/api/: __init__.py  jobs.py  profiles.py  scraped.py  system.py
jobtrack/scraping/: __init__.py  base.py  generic.py  lever.py
scripts/: api_smoke.py  test_hiring_cafe.py  test_scrape.py  test_simplify_jobs.py  test_streaming.py
src/job_track/: __init__.py  main.py
src/job_track/api/: __init__.py  server.py
src/job_track/db/: __init__.py  models.py
src/job_track/scraper/: __init__.py  hiring_cafe.py  scraper.py  simplify_jobs.py
src/job_track/tui/: __init__.py  app.py
tests/: __init__.py  test_api.py  test_integration.py  test_models.py  test_scraper.py
tui/: __init__.py  app.py
