[project]
name = "jobtrack"
version = "0.1.0"
description = "Local job tracking service with scraper, TUI, and browser extension"
authors = [{name = "User"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.6.1",
    "httpx>=0.27.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "python-multipart>=0.0.9",
    "textual>=0.59.1",
    "typer>=0.12.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.7"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jobtrack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
